<resources>
    <string name="app_name">CreditPredict</string>
    <string name="an_image_of_cards_stack">An image of cards stack</string>
    <string name="check_it_now">Check It Now</string>
    <string name="analyze_whether_you_deserve_to_make_a_credit_card_or_not_by_just_filling_some_forms">Analyze whether you deserve to make a credit card or not by just filling some forms!</string>
    <string name="start_checking">Start Checking</string>
    <string name="icon_at_center_bottom">Icon at center bottom</string>
    <string name="personal_identity">Personal Identity</string>
    <string name="full_name">Full Name</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="age">Age</string>
    <string name="your_age">Your Age</string>
    <string name="gender">Gender</string>
    <string name="your_gender">Your gender</string>
    <string name="go_next">Go Next</string>
    <string name="contact_amp_identity"><![CDATA[Contact & Identity]]></string>
    <string name="do_you_have_any_phone_number">Do you have any phone number?</string>
    <string name="do_you_have_any_phone_number2">How is your credit history?</string>
    <string name="are_you_working_as_a_foreign_worker_here">Are you working as a foreign worker here?</string>
    <string name="employment_status">Employment Status</string>
    <string name="what_type_of_job_are_you_doing_right_now">What type of job are you doing right now</string>
    <string name="what_kind_of_property_do_you_have">What kind of property do you have?</string>
    <string name="duration">Duration</string>
    <string name="amount">Amount</string>
    <string name="credits_amp_warranty"><![CDATA[Credits & Warranty]]></string>
    <string name="credit_history">Credit History</string>
    <string name="other_debtors">Other Debtors</string>
    <string name="fams_amp_residence"><![CDATA[Fams & Residence]]></string>
    <string name="present_residence">Present Residence</string>
    <string name="job_history_savings"><![CDATA[Job History & Savings]]></string>
    <string name="job_history_amp_savings"><![CDATA[Job History & Savings]]></string>
    <string name="current_employment_duration">Current Employment Duration</string>
    <string name="how_long_have_you_been_working_on_your_current_job">How long have you been working on your current job</string>
    <string name="explanation">Explanation</string>
    <string name="how_much_money_have_you_saved_at_this_time">How much money have you saved at this time?</string>
    <string name="analyze">Analyze</string>
    <string name="people_liable">People Liable</string>
    <string name="total_credit_taken">Total Credit Taken</string>
    <string name="we_have_analyzed_your_worthness_on_owning_a_credit_card_and_our_data_stated_that_you_are_worth_of_having_a_credit_card_congratulations">We have analyzed your worthness on owning a credit card, and our data stated that you are worth of having a credit card. Congratulations!</string>
    <string name="enter_amount_here">Enter amount here</string>
    <string name="purpose">Purpose</string>
    <string name="what_percentage_of_your_income_will_be_used_for_the_loan_installment">How much of your income (in percantage%) will be used for the loan installment?</string>
    <string name="other_installment_plans">Other Installment Plans</string>
    <string name="do_you_have_any_other_installment_plans_e_g_bank_store_none">Do you have any other installment plans? (e.g., bank, store, none)</string>
    <string name="marital_status">Marital Status</string>
    <string name="what_is_your_marital_status_e_g_married_single_divorced_widowed">What is your marital status? (e.g., married, single, divorced, widowed)</string>
    <string name="housing_status">Housing Status</string>
    <string name="what_is_your_housing_status_e_g_renting_own_free_of_charge">What is your housing status? (e.g., renting, own, free of charge)</string>
    <string name="how_long_have_you_lived_at_your_current_residence_e_g_less_than_1_year_1_4_years_4_7_years_more_than_7_years">How long have you lived at your current residence? (e.g., less than 1 year, 1-4 years, 4-7 years, more than 7 years)</string>
    <string name="how_many_people_are_financially_dependent_on_you">How many people are financially dependent on you?</string>
    <string name="how_many_credits_have_you_had_before">How many credits have you had before?</string>
    <string name="number_of_credits">Number of credits</string>
    <string name="number_of_people">Number of people</string>
    <string name="credit_risk">Credit Risk</string>
    <string name="does_using_credit_card_nowadays_is_a_good_thing_what_is_your_opinion">Does using credit card nowadays is a good thing? What is your opinion?</string>
    <string name="installment_saving">Installment Saving</string>
</resources>