<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darken"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/iv_card_stack"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/an_image_of_cards_stack"
        android:src="@drawable/card_stack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/check_it_now"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_card_stack" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"
        android:text="@string/analyze_whether_you_deserve_to_make_a_credit_card_or_not_by_just_filling_some_forms"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/btn_start_checking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/start_checking"
        app:icon="@drawable/search"
        app:iconTint="@color/dark_blue"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/icon_center"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/icon_at_center_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_fix"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>