<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PersonalActivity">

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="26dp"
        android:src="@drawable/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/personal_identity"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_star" />

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fullname"
        style="@style/CustomTextInputLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#00FF00"
        app:boxStrokeErrorColor="#00FF00"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_fullname">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/your_name_here"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/til_fullname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_age"
        style="@style/CustomTextInputLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#00FF00"
        app:boxStrokeErrorColor="#00FF00"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_age">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:id="@+id/et_age"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/your_age"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/til_age" />

    <Spinner
        android:id="@+id/sp_gender"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        android:entries="@array/gender"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/go_next"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_no_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>